# tetris-aider

./: .gitignore  Makefile  README.md  pyproject.toml
src/tetris/: __init__.py  __main__.py  board.py  constants.py  game.py  pieces.py  recorder.py  renderer.py
tests/: __init__.py  test_board.py  test_game.py  test_pieces.py
