[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "test poetry"
authors = ["Naoko <naoko.reeves@runeatexplore.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
llama-index-packs-streamlit-chatbot = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
