[tool.poetry]
name = "my-app"
version = "0.1.0"
description = "test poetry"
authors = ["Naoko <naoko.reeves@runeatexplore.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
langchain = "^0.2.14"
langchain-community = "^0.2.12"
llama-index-packs-streamlit-chatbot = "^0.2.1"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "tetris"
version = "0.1.0"
description = "A Tetris game implemented with Pygame"
readme = "README.md"
authors = [
    {name = "Tetris Developer", email = "dev@example.com"}
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "pygame>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
]

[project.scripts]
tetris = "tetris.__main__:main"
